--- a/action.yml
+++ b/action.yml
@@ -25,9 +25,11 @@ runs:
 
     - name: Install dependencies
       run: npm install
+      shell: bash
 
     - name: Run review bot
       run: node dist/index.js
+      shell: bash
       env:
         GEMINI_API_KEY: ${{ inputs.GEMINI_API_KEY }}
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
