--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "exec": "node --require esbuild-register src/local.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "esbuild-register": "^3.6.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.0.12",
     "@octokit/rest": "^21.0.2",
     "ai": "^4.0.22",
+    "dotenv": "^16.4.7",
     "minimatch": "^10.0.1"
   }
 }
