--- a/.github/workflows/release-updater.yml
+++ b/.github/workflows/release-updater.yml
@@ -2,16 +2,22 @@ name: Move Major Release Tag
 on:
   release:
     types: [created]
+
 jobs:
   movetag:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the repo
+        uses: actions/checkout@v3
       - name: Get major version num and update tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           VERSION=${GITHUB_REF#refs/tags/}
           MAJOR=${VERSION%%.*}
-          git config --global user.name 'YOUR NAME'
-          git config --global user.email 'USERNAME@users.noreply.github.com'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git tag -fa ${MAJOR} -m "Update major version tag"
           git push origin ${MAJOR} --force
