Update default model to gemini-2.5-flash
Change from experimental gemini-2.0-flash-exp to stable gemini-2.5-flash
for better reliability and free tier quota.

--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
     required: true
   MODEL_CODE:
     description: "Model code for Gemini"
-    default: "models/gemini-2.0-flash-exp"
+    default: "models/gemini-2.5-flash"
   LANGUAGE:
     description: "Preferred language for review comments"
     default: "English"
